sna: Protect against undefined O_CLOEXEC

Reported-by: Giovanni Mariani <mc2374@mclink.it>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55577
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>